--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,14 @@ textarea {
   border-radius: 50%;
 }
 
+#phone-number {
+  text-align: center;
+}
+
+#social-media {
+  gap: 1em;
+}
+
 a[href^="tel:"] {
   color: var(--bs-primary-text-emphasis);
   text-decoration: none;
@@ -105,7 +113,7 @@ a[href^="tel:"] {
 
 #hero-image {
   display: block;
-  background-image: url("../img/20240411_143331.jpg");
+  background-image: url("/img/20240411_143331.jpg");
   max-width: 100%;
   height: 600px;
   background-size: cover;
@@ -235,36 +243,36 @@ a[href^="tel:"] {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   body {
-    padding-top: 120px;
-  }
-  
-  #social-media {
-    gap: 1em;
+    padding-top: 80px;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   body {
-    padding-top: 100px;
-  }
-  
-  #social-media {
-    gap: 1em;
+    padding-top: 80px;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   body {
-    padding-top: 60px;
+    padding-top: 80px;
   }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  body {
+    padding-top: 60px;
+  }
+
   #social-media {
     gap: 0em;
+  }
+
+  #phone-number {
+    text-align: left;
   }
 }
 
