font changes, carousel, merch and new pics, icons, moving top items around

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,21 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+@font-face { 
+  font-family: "Russo One";
+  font-style: normal;
+  font-weight: 400;
+  src: 
+    url(/fonts/Russo_One/RussoOne-Regular.ttf) format("truetype"),
+}
+
+@font-face { 
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 400;
+  src: 
+    url(/fonts/Arimo/Arimo-VariableFont_wght.ttf) format("truetype"),
+}
 
 html {
   color: #222;
@@ -20,7 +35,11 @@ html {
 body {
   width: 100%;
   height: 100%;
-  font-family: "Trebuchet MS", Verdana, Sans-serif;
+  font-family: "Arimo", Verdana, Sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Russo One", Verdana, Sans-serif;
 }
 
 /*
@@ -151,10 +170,24 @@ a[href^="tel:"] {
   border-radius: 25px;
   background-color: #cccccc;
   padding: 1.25rem 2rem 0.75rem 2rem;
+  align-items: center;
 }
 
 #site-footer {
   background-color: #cccccc;
+}
+
+.benefit-icon {
+  width: 250px;
+  height: auto;
+}
+
+.carousel-inner {
+  border-radius: 8px;
+}
+
+.carousel-item img {
+  max-width: 100%;
 }
 
 /* ==========================================================================
@@ -243,7 +276,18 @@ a[href^="tel:"] {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   body {
-    padding-top: 80px;
+    padding-top: 130px;
+  }
+
+  .carousel {
+    max-width: 1000px;
+    height: 400px;
+  }
+  
+  .carousel-inner {
+    width: auto;
+    max-width: 1000px;
+    height: 400px;
   }
 }
 
@@ -252,12 +296,33 @@ a[href^="tel:"] {
   body {
     padding-top: 80px;
   }
+
+  .carousel {
+    max-width: 1200px;
+    max-height: 500px;
+  }
+  
+  .carousel-inner {
+    width: auto;
+    max-width: 1200px;
+    max-height: 500px;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   body {
     padding-top: 80px;
+  }
+
+  .carousel {
+    max-height: 800px;
+  }
+  
+  .carousel-inner {
+    width: auto;
+    max-width: 2000px;
+    max-height: 800px;
   }
 }
 
