--- a/css/style.css
+++ b/css/style.css
@@ -130,34 +130,6 @@ a[href^="tel:"] {
   text-decoration: none;
 }
 
-#hero-image {
-  display: block;
-  background-image: url("/img/20240411_143331.jpg");
-  max-width: 100%;
-  height: 600px;
-  background-size: cover;
-	background-repeat:no-repeat;
-  background-position:center center;
-}
-
-#hero-image section {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-#hero-image section * {
-  color: #fff;
-  padding-bottom: 1rem;
-}
-
-#hero-image section h1 {
-  width: 80%;
-}
-
 #hero-button {
   height: 43px;
 }
@@ -173,21 +145,21 @@ a[href^="tel:"] {
   align-items: center;
 }
 
-#site-footer {
-  background-color: #cccccc;
-}
-
-.benefit-icon {
-  width: 250px;
-  height: auto;
-}
-
 .carousel-inner {
   border-radius: 8px;
 }
 
 .carousel-item img {
-  max-width: 100%;
+  width: 100%;
+}
+
+.benefit-icon {
+  width: 175px;
+  height: auto;
+}
+
+#site-footer {
+  background-color: #cccccc;
 }
 
 /* ==========================================================================
@@ -276,17 +248,25 @@ a[href^="tel:"] {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   body {
+    text-align: center;
     padding-top: 130px;
   }
 
   .carousel {
-    max-width: 1000px;
+    padding-left: 1em;
+    padding-right: 1em;
+    max-width: 700px;
     height: 400px;
   }
   
   .carousel-inner {
     width: auto;
-    max-width: 1000px;
+    max-width: 700px;
+    height: 400px;
+  }
+  
+  .carousel-item img {
+    width: auto;
     height: 400px;
   }
 }
@@ -294,17 +274,18 @@ a[href^="tel:"] {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   body {
+    text-align: center;
     padding-top: 80px;
   }
 
   .carousel {
-    max-width: 1200px;
+    max-width: 900px;
     max-height: 500px;
   }
   
   .carousel-inner {
     width: auto;
-    max-width: 1200px;
+    max-width: 900px;
     max-height: 500px;
   }
 }
@@ -312,16 +293,18 @@ a[href^="tel:"] {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   body {
+    text-align: left;
     padding-top: 80px;
   }
 
   .carousel {
+    max-width: 1600px;
     max-height: 800px;
   }
   
   .carousel-inner {
     width: auto;
-    max-width: 2000px;
+    max-width: 1600px;
     max-height: 800px;
   }
 }
