--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,21 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+@font-face { 
+  font-family: "Russo One";
+  font-style: normal;
+  font-weight: 400;
+  src: 
+    url('../fonts/Russo_One/RussoOne-Regular.ttf') format("truetype"),
+}
+
+@font-face { 
+  font-family: "Arimo";
+  font-style: normal;
+  font-weight: 400;
+  src: 
+    url('../fonts/Arimo/Arimo-VariableFont_wght.ttf') format("truetype"),
+}
 
 html {
   color: #222;
