--- a/css/style.css
+++ b/css/style.css
@@ -117,12 +117,18 @@ textarea {
   border-radius: 50%;
 }
 
+.site-logo {
+  width: auto;
+  height: 200px;
+}
+
 #nav-phone {
   text-align: center;
 }
 
 #nav-name {
   text-align: center;
+  padding-top: 0.25em;
 }
 
 #nav-social {
@@ -143,6 +149,10 @@ a[href^="tel:"] {
   background-color: white;
 }
 
+#form-image {
+  border-radius: 8px;
+}
+
 .textBox {
   border-radius: 25px;
   background-color: var(--bs-tertiary);
@@ -161,6 +171,11 @@ a[href^="tel:"] {
 .benefit-icon {
   width: 175px;
   height: auto;
+}
+
+.merch-img {
+  width: auto;
+  height: 300px;
 }
 
 #site-footer {
@@ -317,7 +332,7 @@ a[href^="tel:"] {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   body {
-    padding-top: 60px;
+    padding-top: 100px;
   }
 
   #nav-phone {
@@ -327,6 +342,12 @@ a[href^="tel:"] {
   #nav-social {
     gap: 0em;
     justify-content: right;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  body {
+    padding-top: 70px;
   }
 }
 
